--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
