--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "lucide-react": "^0.129.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
