--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@geist-ui/core": "^2.3.8",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
