--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "lucide-react": "^0.129.0",
+    "nanoid": "^4.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
